--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -2,9 +2,6 @@
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Health ERP platform for the modern health proffessionals" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
-    <menu id="1031">
-      <phrase id="menutext" value="Dischage Summary Report" />
-    </menu>
     <menu id="642">
       <phrase id="menutext" value="Dashboard" />
     </menu>
@@ -126,13 +123,22 @@
       <phrase id="menutext" value="Beds" />
     </menu>
     <menu id="1021">
-      <phrase id="menutext" value="Discharge Summary" />
+      <phrase id="menutext" value="Discharge Patient" />
+    </menu>
+    <menu id="1031">
+      <phrase id="menutext" value="Discharge Sheets" />
+    </menu>
+    <menu id="1033">
+      <phrase id="menutext" value="Prescriptions" />
     </menu>
     <menu id="1026">
       <phrase id="menutext" value="Vitals" />
     </menu>
     <menu id="1027">
       <phrase id="menutext" value="Services" />
+    </menu>
+    <menu id="1032">
+      <phrase id="menutext" value="Prescription Details" />
     </menu>
     <menu id="50">
       <phrase id="menutext" value="Doctor Panel" />
@@ -3825,6 +3831,9 @@
       <field id="id">
         <phrase id="fldcaption" value="Admission No" />
       </field>
+      <field id="patient_id">
+        <phrase id="fldcaption" value="patient id" />
+      </field>
       <field id="patient_name">
         <phrase id="fldcaption" value="Patient Name" />
       </field>
@@ -3833,6 +3842,9 @@
       </field>
       <field id="gender">
         <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
       </field>
       <field id="admission_reason">
         <phrase id="fldcaption" value="Admission Reason" />
@@ -3851,6 +3863,101 @@
       </field>
       <field id="total_days">
         <phrase id="fldcaption" value="Total Days" />
+      </field>
+    </table>
+    <table id="patient_ipd_prescription_details">
+      <phrase id="tblcaption" value="Prescription Details" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="prescription_id">
+        <phrase id="fldcaption" value="Prescription No" />
+      </field>
+      <field id="medicine_stock_id">
+        <phrase id="fldcaption" value="Medicine" />
+      </field>
+      <field id="method">
+        <phrase id="fldcaption" value="Route/Method" />
+        <phrase id="fldtagvalue1" value="SC" />
+        <phrase id="fldtagcaption1" value="SC" />
+        <phrase id="fldtagvalue2" value="IM" />
+        <phrase id="fldtagcaption2" value="IM" />
+        <phrase id="fldtagvalue3" value="IV" />
+        <phrase id="fldtagcaption3" value="IV" />
+        <phrase id="fldtagvalue4" value="Oral" />
+        <phrase id="fldtagcaption4" value="Oral" />
+        <phrase id="fldtagvalue5" value="PR" />
+        <phrase id="fldtagcaption5" value="PR" />
+      </field>
+      <field id="dose_quantity">
+        <phrase id="fldcaption" value="Dose" />
+      </field>
+      <field id="dose_type">
+        <phrase id="fldcaption" value="Units" />
+        <phrase id="fldtagvalue1" value="units" />
+        <phrase id="fldtagcaption1" value="units" />
+        <phrase id="fldtagvalue2" value="grams" />
+        <phrase id="fldtagcaption2" value="grams" />
+        <phrase id="fldtagvalue3" value="mg" />
+        <phrase id="fldtagcaption3" value="mg" />
+        <phrase id="fldtagvalue4" value="micrograms" />
+        <phrase id="fldtagcaption4" value="micrograms" />
+        <phrase id="fldtagvalue5" value="mls" />
+        <phrase id="fldtagcaption5" value="mls" />
+      </field>
+      <field id="formulation">
+        <phrase id="fldcaption" value="Formulation" />
+        <phrase id="fldtagvalue1" value="Capsules" />
+        <phrase id="fldtagcaption1" value="Capsules" />
+        <phrase id="fldtagvalue2" value="Creams" />
+        <phrase id="fldtagcaption2" value="Creams" />
+        <phrase id="fldtagvalue3" value="Injection" />
+        <phrase id="fldtagcaption3" value="Injection" />
+        <phrase id="fldtagvalue4" value="Syrup" />
+        <phrase id="fldtagcaption4" value="Syrup" />
+        <phrase id="fldtagvalue5" value="Tabs" />
+        <phrase id="fldtagcaption5" value="Tabs" />
+      </field>
+      <field id="dose_interval">
+        <phrase id="fldcaption" value="dose interval" />
+        <phrase id="fldtagvalue1" value="Once/Day (OD)" />
+        <phrase id="fldtagcaption1" value="Once/Day (OD)" />
+        <phrase id="fldtagvalue2" value="Twice Daily (BD)" />
+        <phrase id="fldtagcaption2" value="Twice Daily (BD)" />
+        <phrase id="fldtagvalue3" value="Thrice Daily (TDS)" />
+        <phrase id="fldtagcaption3" value="Thrice Daily (TDS)" />
+        <phrase id="fldtagvalue4" value="Four Times (QID)" />
+        <phrase id="fldtagcaption4" value="Four Times (QID)" />
+      </field>
+      <field id="number_of_days">
+        <phrase id="fldcaption" value="number of days" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="date created" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="date updated" />
+      </field>
+    </table>
+    <table id="patient_ipd_prescriptions">
+      <phrase id="tblcaption" value="Prescriptions" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="admission_id">
+        <phrase id="fldcaption" value="Admission No" />
+      </field>
+      <field id="patient_id">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="created_by_user_id">
+        <phrase id="fldcaption" value="Prescribed By" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Prescription Date" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
   </project>
