--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,7 +1,10 @@
-<ew-language date="2025/1/9" id="en-US" author="e.World Technology Limited">
+<ew-language date="2025/1/11" id="en-US" author="e.World Technology Limited">
   <project>
-    <phrase id="bodytitle" value="AfyaPlus | Health ERP platform for the modern health proffessionals" />
+    <phrase id="bodytitle" value="AfyaPlus | The platform for modern health facilities" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
+    <menu id="1034">
+      <phrase id="menutext" value="ipd billing report" />
+    </menu>
     <menu id="642">
       <phrase id="menutext" value="Dashboard" />
     </menu>
@@ -3304,6 +3307,12 @@
       <field id="patient_id">
         <phrase id="fldcaption" value="Patient Name" />
       </field>
+      <field id="payment_method_id">
+        <phrase id="fldcaption" value="Payment Method" />
+      </field>
+      <field id="medical_scheme_id">
+        <phrase id="fldcaption" value="Medical Scheme" />
+      </field>
       <field id="status">
         <phrase id="fldcaption" value="Status" />
       </field>
@@ -3958,6 +3967,27 @@
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="ipd_billing_report">
+      <phrase id="tblcaption" value="ipd billing report" />
+      <field id="patient_uhid">
+        <phrase id="fldcaption" value="patient uhid" />
+      </field>
+      <field id="patient_name">
+        <phrase id="fldcaption" value="patient name" />
+      </field>
+      <field id="age">
+        <phrase id="fldcaption" value="age" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="gender" />
+      </field>
+      <field id="date_admitted">
+        <phrase id="fldcaption" value="date admitted" />
+      </field>
+      <field id="date_discharged">
+        <phrase id="fldcaption" value="date discharged" />
       </field>
     </table>
   </project>
