--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -140,6 +140,9 @@
     <menu id="1032">
       <phrase id="menutext" value="Prescription Details" />
     </menu>
+    <menu id="1036">
+      <phrase id="menutext" value="Services Offered" />
+    </menu>
     <menu id="50">
       <phrase id="menutext" value="Doctor Panel" />
     </menu>
@@ -223,6 +226,9 @@
     </menu>
     <menu id="1034">
       <phrase id="menutext" value="IPD Billing" />
+    </menu>
+    <menu id="1035">
+      <phrase id="menutext" value="Issued Items" />
     </menu>
     <menu id="959">
       <phrase id="menutext" value="Procurement" />
@@ -3977,11 +3983,17 @@
     </table>
     <table id="ipd_billing_report">
       <phrase id="tblcaption" value="IPD Billing" />
+      <field id="admission_id">
+        <phrase id="fldcaption" value="Admission No" />
+      </field>
       <field id="patient_uhid">
-        <phrase id="fldcaption" value="Patient UHID" />
+        <phrase id="fldcaption" value="UHID" />
       </field>
       <field id="patient_name">
         <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
       </field>
       <field id="age">
         <phrase id="fldcaption" value="Age" />
@@ -4000,6 +4012,36 @@
       </field>
       <field id="date_discharged">
         <phrase id="fldcaption" value="Discharge Date" />
+      </field>
+    </table>
+    <table id="ipd_bill_issued_items">
+      <phrase id="tblcaption" value="Issued Items" />
+      <field id="admission_id">
+        <phrase id="fldcaption" value="Admission No" />
+      </field>
+      <field id="item_title">
+        <phrase id="fldcaption" value="Item" />
+      </field>
+      <field id="quantity">
+        <phrase id="fldcaption" value="Quantity" />
+      </field>
+      <field id="selling_price">
+        <phrase id="fldcaption" value="Cost (Kshs)" />
+      </field>
+      <field id="line_total">
+        <phrase id="fldcaption" value="Line Total (Kshs)" />
+      </field>
+    </table>
+    <table id="ipd_bill_services">
+      <phrase id="tblcaption" value="Services Offered" />
+      <field id="admission_id">
+        <phrase id="fldcaption" value="Admission No." />
+      </field>
+      <field id="service_name">
+        <phrase id="fldcaption" value="Service" />
+      </field>
+      <field id="cost">
+        <phrase id="fldcaption" value="Cost (Kshs)" />
       </field>
     </table>
   </project>
