--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,7 +1,22 @@
-<ew-language date="2025/1/11" id="en-US" author="e.World Technology Limited">
+<ew-language date="2025/1/12" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | The platform for modern health facilities" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
+    <menu id="1173">
+      <phrase id="menutext" value="Consultation" />
+    </menu>
+    <menu id="1172">
+      <phrase id="menutext" value="Total Bill (Kshs)" />
+    </menu>
+    <menu id="1169">
+      <phrase id="menutext" value="Laboratory Tests" />
+    </menu>
+    <menu id="1170">
+      <phrase id="menutext" value="Radiology Tests" />
+    </menu>
+    <menu id="1171">
+      <phrase id="menutext" value="Medicines Issued" />
+    </menu>
     <menu id="642">
       <phrase id="menutext" value="Dashboard" />
     </menu>
@@ -226,6 +241,9 @@
     </menu>
     <menu id="239">
       <phrase id="menutext" value="Pharmacy" />
+    </menu>
+    <menu id="1168">
+      <phrase id="menutext" value="Master Bill" />
     </menu>
     <menu id="1167">
       <phrase id="menutext" value="IPD" />
@@ -4142,6 +4160,102 @@
       </field>
       <field id="total_bill">
         <phrase id="fldcaption" value="Total Bill (Kshs)" />
+      </field>
+    </table>
+    <table id="opd_bill_master_report">
+      <phrase id="tblcaption" value="OPD Billing" />
+      <field id="id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="uhid">
+        <phrase id="fldcaption" value="UHID" />
+      </field>
+      <field id="patient_name">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="age">
+        <phrase id="fldcaption" value="Age" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="visit_type">
+        <phrase id="fldcaption" value="Checkin Type" />
+      </field>
+      <field id="payment_method">
+        <phrase id="fldcaption" value="Payment Method" />
+      </field>
+      <field id="company">
+        <phrase id="fldcaption" value="Medical Scheme" />
+      </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
+      </field>
+      <field id="visit_date">
+        <phrase id="fldcaption" value="Checkin Date" />
+      </field>
+    </table>
+    <table id="opd_lab_master_bill">
+      <phrase id="tblcaption" value="Laboratory Tests" />
+      <field id="visit_id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="service_name">
+        <phrase id="fldcaption" value="Test Name" />
+      </field>
+      <field id="cost">
+        <phrase id="fldcaption" value="Cost (Kshs)" />
+      </field>
+    </table>
+    <table id="opd_radiology_master_bill">
+      <phrase id="tblcaption" value="Radiology Tests" />
+      <field id="visit_id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="service_name">
+        <phrase id="fldcaption" value="Test Name" />
+      </field>
+      <field id="cost">
+        <phrase id="fldcaption" value="Cost (Kshs)" />
+      </field>
+    </table>
+    <table id="opd_pharmacy_master_bill">
+      <phrase id="tblcaption" value="Medicines Issued" />
+      <field id="visit_id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="brand_name">
+        <phrase id="fldcaption" value="Medicine" />
+      </field>
+      <field id="quantity">
+        <phrase id="fldcaption" value="Quantity" />
+      </field>
+      <field id="selling_price_per_unit">
+        <phrase id="fldcaption" value="Cost (Kshs)" />
+      </field>
+      <field id="line_total">
+        <phrase id="fldcaption" value="Line Total (Kshs)" />
+      </field>
+    </table>
+    <table id="opd_bill_total">
+      <phrase id="tblcaption" value="Total Bill (Kshs)" />
+      <field id="id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="opd_total_bill">
+        <phrase id="fldcaption" value="Total Bill (Kshs)" />
+      </field>
+    </table>
+    <table id="opd_consultation">
+      <phrase id="tblcaption" value="Consultation" />
+      <field id="visit_id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="item_title">
+        <phrase id="fldcaption" value="Consultation" />
+      </field>
+      <field id="cost">
+        <phrase id="fldcaption" value="Cost (Kshs)" />
       </field>
     </table>
   </project>
