--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2025/1/13" id="en-US" author="e.World Technology Limited">
+<ew-language date="2025/1/14" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | The platform for modern health facilities" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -3282,6 +3282,12 @@
       <phrase id="tblcaption" value="Beds" />
       <field id="id">
         <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="floor_id">
+        <phrase id="fldcaption" value="Floor" />
+      </field>
+      <field id="ward_type_id">
+        <phrase id="fldcaption" value="Ward Type" />
       </field>
       <field id="ward_id">
         <phrase id="fldcaption" value="Ward" />
