--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2025/1/14" id="en-US" author="e.World Technology Limited">
+<ew-language date="2025/2/2" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | The platform for modern health facilities" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -71,6 +71,12 @@
     <menu id="747">
       <phrase id="menutext" value="Module Manager" />
     </menu>
+    <menu id="1177">
+      <phrase id="menutext" value="County" />
+    </menu>
+    <menu id="1178">
+      <phrase id="menutext" value="Subcounty" />
+    </menu>
     <menu id="855">
       <phrase id="menutext" value="Operations" />
     </menu>
@@ -85,6 +91,9 @@
     </menu>
     <menu id="753">
       <phrase id="menutext" value="Beds" />
+    </menu>
+    <menu id="1176">
+      <phrase id="menutext" value="Bed Status" />
     </menu>
     <menu id="108">
       <phrase id="menutext" value="Notifications" />
@@ -407,10 +416,10 @@
     <menu id="427">
       <phrase id="menutext" value="External Reports" />
     </menu>
-    <menu id="335">
+    <menu id="1179">
       <phrase id="menutext" value="MOH 704A" />
     </menu>
-    <menu id="428">
+    <menu id="1180">
       <phrase id="menutext" value="MOH 704B" />
     </menu>
     <menu id="317">
@@ -1247,6 +1256,12 @@
       <field id="email_address">
         <phrase id="fldcaption" value="Email" />
         <phrase id="custommsg" value="Email Address is already registered" />
+      </field>
+      <field id="county_id">
+        <phrase id="fldcaption" value="County" />
+      </field>
+      <field id="subcounty_id">
+        <phrase id="fldcaption" value="Subcounty" />
       </field>
       <field id="physical_address">
         <phrase id="fldcaption" value="Physical Address" />
@@ -2601,90 +2616,6 @@
     </table>
     <table id="radiology_overview">
       <phrase id="tblcaption" value="Radiology Overview" />
-    </table>
-    <table id="moh204a_report">
-      <phrase id="tblcaption" value="MOH 704A Report" />
-      <field id="id">
-        <phrase id="fldcaption" value="id" />
-      </field>
-      <field id="patient_name_moh204a">
-        <phrase id="fldcaption" value="Patient Name" />
-      </field>
-      <field id="patient_age">
-        <phrase id="fldcaption" value="patient age" />
-      </field>
-      <field id="date_of_birth">
-        <phrase id="fldcaption" value="date of birth" />
-      </field>
-      <field id="gender">
-        <phrase id="fldcaption" value="gender" />
-      </field>
-      <field id="phone">
-        <phrase id="fldcaption" value="phone" />
-      </field>
-      <field id="email_address">
-        <phrase id="fldcaption" value="email address" />
-      </field>
-      <field id="marital_status">
-        <phrase id="fldcaption" value="marital status" />
-      </field>
-      <field id="date_created">
-        <phrase id="fldcaption" value="registration date" />
-      </field>
-      <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
-      </field>
-      <field id="next_of_kin">
-        <phrase id="fldcaption" value="next of kin" />
-      </field>
-      <field id="next_of_kin_phone">
-        <phrase id="fldcaption" value="next of kin phone" />
-      </field>
-      <field id="registration_month">
-        <phrase id="fldcaption" value="registration month" />
-      </field>
-    </table>
-    <table id="moh204b_report">
-      <phrase id="tblcaption" value="MOH 704B Report" />
-      <field id="id">
-        <phrase id="fldcaption" value="id" />
-      </field>
-      <field id="patient_name_moh204a">
-        <phrase id="fldcaption" value="Patient Name" />
-      </field>
-      <field id="date_of_birth">
-        <phrase id="fldcaption" value="date of birth" />
-      </field>
-      <field id="patient_age">
-        <phrase id="fldcaption" value="patient age" />
-      </field>
-      <field id="gender">
-        <phrase id="fldcaption" value="gender" />
-      </field>
-      <field id="phone">
-        <phrase id="fldcaption" value="phone" />
-      </field>
-      <field id="email_address">
-        <phrase id="fldcaption" value="email address" />
-      </field>
-      <field id="marital_status">
-        <phrase id="fldcaption" value="marital status" />
-      </field>
-      <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
-      </field>
-      <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
-      </field>
-      <field id="next_of_kin">
-        <phrase id="fldcaption" value="next of kin" />
-      </field>
-      <field id="next_of_kin_phone">
-        <phrase id="fldcaption" value="next of kin phone" />
-      </field>
-      <field id="registration_month">
-        <phrase id="fldcaption" value="registration month" />
-      </field>
     </table>
     <table id="medicine_dispensation_details">
       <phrase id="tblcaption" value="Medicine Details" />
@@ -4302,6 +4233,144 @@
       </field>
       <field id="total_bed_charges">
         <phrase id="fldcaption" value="Bed Charges (Kshs)" />
+      </field>
+    </table>
+    <table id="beds_status">
+      <phrase id="tblcaption" value="Bed Status" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="floor_name">
+        <phrase id="fldcaption" value="Floor" />
+      </field>
+      <field id="ward_type">
+        <phrase id="fldcaption" value="Ward Type" />
+      </field>
+      <field id="ward_name">
+        <phrase id="fldcaption" value="Ward Name" />
+      </field>
+      <field id="bed_name">
+        <phrase id="fldcaption" value="Bed Name" />
+      </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Assignment Date" />
+      </field>
+    </table>
+    <table id="county">
+      <phrase id="tblcaption" value="county" />
+      <field id="id">
+        <phrase id="fldcaption" value="id" />
+      </field>
+      <field id="countyname">
+        <phrase id="fldcaption" value="county Name" />
+      </field>
+    </table>
+    <table id="sub_county">
+      <phrase id="tblcaption" value="sub county" />
+      <field id="id">
+        <phrase id="fldcaption" value="id" />
+      </field>
+      <field id="county_id">
+        <phrase id="fldcaption" value="county id" />
+      </field>
+      <field id="countyname">
+        <phrase id="fldcaption" value="county Name" />
+      </field>
+      <field id="subcounty">
+        <phrase id="fldcaption" value="sub County" />
+      </field>
+    </table>
+    <table id="moh704a_report">
+      <phrase id="tblcaption" value="MOH 704A Report" />
+      <field id="id">
+        <phrase id="fldcaption" value="UHID" />
+      </field>
+      <field id="patient_name">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="date_of_birth">
+        <phrase id="fldcaption" value="DoB" />
+      </field>
+      <field id="patient_age">
+        <phrase id="fldcaption" value="Age" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="phone">
+        <phrase id="fldcaption" value="Phone" />
+      </field>
+      <field id="email_address">
+        <phrase id="fldcaption" value="Email" />
+      </field>
+      <field id="countyname">
+        <phrase id="fldcaption" value="County" />
+      </field>
+      <field id="subcounty">
+        <phrase id="fldcaption" value="Subcounty" />
+      </field>
+      <field id="marital_status">
+        <phrase id="fldcaption" value="Maital Status" />
+      </field>
+      <field id="next_of_kin">
+        <phrase id="fldcaption" value="NoK" />
+      </field>
+      <field id="next_of_kin_phone">
+        <phrase id="fldcaption" value="NoK Phone" />
+      </field>
+      <field id="registration_month">
+        <phrase id="fldcaption" value="Registration Month" />
+      </field>
+      <field id="registration_date">
+        <phrase id="fldcaption" value="Registration Date" />
+      </field>
+    </table>
+    <table id="moh704b_report">
+      <phrase id="tblcaption" value="MOH 704B Report" />
+      <field id="id">
+        <phrase id="fldcaption" value="UHID" />
+      </field>
+      <field id="patient_name">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="date_of_birth">
+        <phrase id="fldcaption" value="DoB" />
+      </field>
+      <field id="patient_age">
+        <phrase id="fldcaption" value="Age" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="phone">
+        <phrase id="fldcaption" value="Phone" />
+      </field>
+      <field id="email_address">
+        <phrase id="fldcaption" value="Email" />
+      </field>
+      <field id="countyname">
+        <phrase id="fldcaption" value="County" />
+      </field>
+      <field id="subcounty">
+        <phrase id="fldcaption" value="Subcounty" />
+      </field>
+      <field id="marital_status">
+        <phrase id="fldcaption" value="Marital Status" />
+      </field>
+      <field id="next_of_kin">
+        <phrase id="fldcaption" value="NoK" />
+      </field>
+      <field id="next_of_kin_phone">
+        <phrase id="fldcaption" value="NoK Phone" />
+      </field>
+      <field id="registration_month">
+        <phrase id="fldcaption" value="Registration Month" />
+      </field>
+      <field id="registrration_date">
+        <phrase id="fldcaption" value="Registration Date" />
       </field>
     </table>
   </project>
